Revision history for Mojolicious-Static-Role-Compressed

{{$NEXT}}

0.01  2019-04-23 23:15:14 CDT
        - Initial release